--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,11 @@ pipeline {
         stage('build') {
             steps {
                 sh 'mvn --version'
+                apt update -y
+                apt install git -y 
+                git clone https://github.com/ashishrpandey/maven-project
+                cd maven-project
+                mvn compile
             }
         }
     }
