--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,8 +4,8 @@ pipeline {
         stage('build') {
             steps {
                 sh 'mvn --version'
-                sh 'apt update -y'
-                sh 'apt install git -y' 
+                sh 'sudo apt update -y'
+                sh 'sudo apt install git -y' 
                 sh 'git clone https://github.com/ashishrpandey/maven-project'
                 sh 'cd maven-project'
                 sh 'mvn compile'
